[gd_scene load_steps=11 format=2]

[ext_resource path="res://Fonts/TrulyMadlyDpad-a72o.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=2]
[ext_resource path="res://Scenes/TargetObjects.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/DistractorObjects.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/CursorTrail.tscn" type="PackedScene" id=5]
[ext_resource path="res://Fonts/font.tres" type="DynamicFont" id=6]

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21.9513, 392.709 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 23.839, 391.69 )

[node name="Game" type="Node2D"]
script = ExtResource( 2 )
TargetObjects = ExtResource( 3 )
DistractorObjects = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1367.0
margin_bottom = 768.0
color = Color( 0.192157, 0.235294, 0.317647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TargetObjectsScoreLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 8.0
margin_top = 30.0
margin_right = 323.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 3 )
text = "Target Objects Hit:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DistractorObjectsScoreLabel" type="Label" parent="."]
margin_left = 6.22449
margin_top = 86.0356
margin_right = 197.224
margin_bottom = 123.036
custom_fonts/font = SubResource( 4 )
text = "Distractor Objects Hit:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MissedObjectsLabel" type="Label" parent="."]
margin_left = 8.4371
margin_top = 132.053
margin_right = 150.437
margin_bottom = 176.053
custom_fonts/font = SubResource( 3 )
text = "Missed Objects: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Label" parent="."]
margin_left = 604.0
margin_top = 330.0
margin_right = 744.0
margin_bottom = 363.0
custom_fonts/font = ExtResource( 6 )
text = "Game Over!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 604.082
margin_top = 363.05
margin_right = 808.082
margin_bottom = 446.05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="Menu"]
margin_left = 63.0
margin_top = 22.0
margin_right = 141.0
margin_bottom = 61.0
custom_fonts/font = ExtResource( 6 )
text = "start"

[node name="TargetObjectsTimer" type="Timer" parent="."]

[node name="DistractorObjectsTimer" type="Timer" parent="."]
wait_time = 1.558

[node name="GameBoarder" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameBoarder"]
position = Vector2( -19.8214, 374.632 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="GameBoarder"]
position = Vector2( 1388.92, 383.113 )
shape = SubResource( 2 )

[node name="CursorTrail" parent="." instance=ExtResource( 5 )]
[connection signal="pressed" from="Menu/Start" to="." method="_on_Start_pressed"]
[connection signal="timeout" from="TargetObjectsTimer" to="." method="_on_TargetObjectsTimer_timeout"]
[connection signal="timeout" from="DistractorObjectsTimer" to="." method="_on_DistractorObjectsTimer_timeout"]
